--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* here is to remove all styling from Markup*/
+/* here is to remove all default styling from Markup*/
 *{
     margin :0;
     padding :0;
@@ -8,10 +8,9 @@
     list-style: none;
     box-sizing: border-box;
 }
-    
-
-  /* declear the color uses( https://coolors.co/ - Color palette generator)*/  
+/* declear element to be used ( color, font size, font weight--) */  
 :root{
+ /* declear the color uses( https://coolors.co/ - Color palette generator)*/  
 --color-primary : #006400;
 --color-success : #004b23;
 --color-warning : #007200;
@@ -32,21 +31,42 @@
 --color-bg1 : #38b000;
 --color-bg2 : #70e000;
 --color-btn : rgb(72, 122, 101);
- }
+--clr-neutral-100: hsl(0 0% 100%);
+--ff-primary: "Be Vietnam Pro", sans-serif;
 
- body{
-    font-family: 'Lato', sans-serif;
-    line-height: 1.7;
-    color:var(--color-black);
-    /*background:var(--color-white);*/
-}
+/* font size to be used are declear here , it make very easier to work with these and as well as responsiveness .I got the idee of the  i will link the video in Readme document*/  
+  --ff-body: var(--ff-primary);
+  --ff-heading: var(--ff-primary);
+
+  --fw-regular: 400;
+  --fw-semi-bold: 500;
+  --fw-bold: 700;
+
+  --fs-300: 0.8125rem;
+  --fs-400: 0.875rem;
+  --fs-500: 0.9375rem;
+  --fs-600: 1rem;
+  --fs-700: 1.875rem;
+  --fs-800: 2.5rem;
+  --fs-900: 3.5rem;
+
+  --fs-body: var(--fs-400);
+  --fs-primary-heading: var(--fs-800);
+  --fs-secondary-heading: var(--fs-700);
+  --fs-nav: var(--fs-500);
+  --fs-button: var(--fs-300);
+
+  --size-100: 0.25rem;
+  --size-200: 0.5rem;
+  --size-300: 0.75rem;
+  --size-400: 1rem;
+  --size-500: 1.5rem;
+  --size-600: 2rem;
+  --size-700: 3rem;
+  --size-800: 4rem;
+  --size-900: 5rem;
 
 
-
-:root {
-  
-
- 
   --clr-neutral-100: hsl(0 0% 100%);
 
   --ff-primary: "Be Vietnam Pro", sans-serif;
@@ -82,7 +102,11 @@
   --size-800: 4rem;
   --size-900: 5rem;
 }
-
+body{
+    font-family: 'Lato', sans-serif;
+    line-height: 1.7;
+    color:var(--color-black);  
+}  
 @media (min-width: 50em) {
   :root {
     --fs-body: var(--fs-500);
@@ -93,26 +117,13 @@
   }
 }
 
-/* https://piccalil.li/blog/a-modern-css-reset*/
+/* https://piccalil.li/blog/a-modern-css-reset - i got this css rules from this site Piccalili.li -The link will provided in the Readme document*/
 
 /* Box sizing rules */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
-
-/* Remove default margin */
-* {
-  margin: 0;
-  padding: 0;
-  padding :0;
-  border :0;
-  outline :0;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
-  font: inherit;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -155,7 +166,6 @@ svg {
   html:focus-within {
     scroll-behavior: auto;
   }
-
   *,
   *::before,
   *::after {
@@ -174,16 +184,9 @@ body {
   color: var(--clr-primary-400);
 }
 
-p:not([class]) {
-  opacity: 0.7;
-  max-width: 32ch;
-}
 
-p[data-width="wide"] {
-  max-width: 42ch;
-}
 
-/* button */
+/* button syling */
 
 .button {
   display: inline-flex;
@@ -197,7 +200,7 @@ p[data-width="wide"] {
   background-color: green;
   box-shadow: 0 1.125em 1em -1em var(--clr-accent-500);
 }
-
+ /* the button with with color* i got the idear fron the Utube tutorial*/
 .button[data-type="inverted"] {
   background-color: var(--clr-neutral-100);
   color: var(--clr-accent-400);
@@ -220,7 +223,7 @@ p[data-width="wide"] {
   
 }
 
-/* navigation */
+/* navigation   element styling*/
 
 .primary-header {
   padding-top: var(--size-700);
@@ -238,25 +241,38 @@ p[data-width="wide"] {
 
 .nav-list {
   font-size: var(--fs-600);
-  /*font-size: var(--fs-nav);*/
 }
 
 .nav-list {
   display: flex;
   gap: clamp(var(--size-400), 5vw, var(--size-700));
   font-weight: var(--fw-semi-bold);
+
 }
 
 .nav-list a {
   text-decoration: none;
   color: var(--clr-primary-400);
+  
 }
 
 .nav-list a:hover,
 .nav-list a:focus {
   color: var(--clr-accent-400);
 }
+#main-img {
+  margin-top:-9% ;
+} 
 
+/* about   element styling*/
+
+#h2-about {
+margin-top:-3%;
+}
+
+
+
+/* for the responsiveness*/
 @media (max-width: 50em) {
   .primary-navigation {
     display: none;
@@ -285,6 +301,28 @@ p[data-width="wide"] {
     text-align: center;
     font-weight: var(--fw-bold);
   }
+
+  .primary-navigation[data-visible] {
+    display: block;
+  }
+
+  .mobile-nav-toggle {
+    display: block;
+    position: fixed;
+    top: var(--size-600);
+    right: var(--size-400);
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    padding: 0.5em;
+  }
+
+  .mobile-nav-toggle .icon-close {
+    display: none;
+  }
+
+}
+
   @media (max-width:320px) {
     .button {
       margin-left: 4%;
@@ -320,32 +358,11 @@ p[data-width="wide"] {
     }
   }
 
+  
+
+/*Blog page syle here*/
 
 
-
-
-  .primary-navigation[data-visible] {
-    display: block;
-  }
-
-  .mobile-nav-toggle {
-    display: block;
-    position: fixed;
-    top: var(--size-600);
-    right: var(--size-400);
-    cursor: pointer;
-    background: transparent;
-    border: 0;
-    padding: 0.5em;
-  }
-
-  .mobile-nav-toggle .icon-close {
-    display: none;
-  }
-}
-/*blog*/
-
-/* Float four columns side by side */
 /* Centered text */
 .text-block {
   position: absolute;
@@ -354,9 +371,7 @@ p[data-width="wide"] {
   background: rgb(0, 0, 0); /* Fallback color */
   background: rgba(18, 18, 18, 0.5); /* Black background with 0.5 opacity */
   color: #b6b9b7;
-  
   padding: 20px;
-  
   transform: translate(-50%, -50%);
 }
 .blog-column {
@@ -372,7 +387,7 @@ p[data-width="wide"] {
   padding: 0 10px;
 }
 
-/* Remove extra left and right margins, due to padding */
+/* to remove extra left and right margins, due to padding */
 .blog-row{margin: 0 -5px;}
 
 /* Clear floats after the columns */
@@ -399,26 +414,20 @@ margin-left: 20%;
 
 }
 
-
-/* Responsive columns */
-
+/*  Blog Responsivenes at 50em  */
 @media screen and (max-width: 50em) {
   .blog-column , .blog-column-testimony{
     width: 40%;
     display: block;
     margin-bottom: 20px;
     margin-left: 0;
-  }
-  
-  
+  } 
 }
 
-
+/*  Blog Responsivenes at 320  */
 @media screen and (max-width: 320px) {
   .blog-column , .blog-column-testimony, .blog{
-      
-    float: left;
-    width: 30%;
+      width: 30%;
   
   }
 
@@ -435,7 +444,7 @@ margin-left: 20%;
   }
   
 }
-
+/*  Blog Responsivenes at 600px  */
 @media screen and (max-width: 600px) {
   .blog-column , .blog-column-testimony{
     width: 48%;
@@ -451,63 +460,16 @@ margin-left: 20%;
 
 
 
-/* footer */
-
-.primary-footer {
-  --logo-color: var(--clr-neutral-100);
-}
-
-.primary-footer-wrapper {
-  display: grid;
-  gap: var(--size-700);
-  grid-template-areas:
-    "form"
-    "nav"
-    "logo-social";
-}
-
-.primary-footer-logo-social {
-  grid-area: logo-social;
-
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: center;
-  gap: var(--size-700);
-}
-
+/* footer syling  
 .primary-footer-nav {
   grid-area: nav;
 }
-
-.primary-footer-form {
-  grid-area: form;
-
-  display: grid;
-  align-content: space-between;
-}
-
-.primary-footer form {
-  display: flex;
-  gap: var(--size-200);
-}
-
-input:where([type="text"], [type="email"], ) {
-  border-radius: 100vw;
-  border: 0;
-  padding: var(--size-300) var(--size-400);
-}
-
-@media (min-width: 50em) {
-  .primary-footer-wrapper {
-    grid-template-areas: "logo-social nav form";
-  }
-
   .primary-footer-logo-social {
     align-items: flex-start;
     justify-content: space-between;
     gap: var(--size-700);
   }
-}
+
 
 @media (max-width: 50em) {
   .primary-footer-wrapper > * {
@@ -525,6 +487,7 @@ input:where([type="text"], [type="email"], ) {
 .footer-nav a {
   color: var(--clr-neutral-100);
   text-decoration: none;
+
 }
 
 .footer-nav a:is(:hover, :focus) {
@@ -537,12 +500,17 @@ input:where([type="text"], [type="email"], ) {
 .social-list {
   display: flex;
   gap: var(--size-600);
-  text-decoration: none;
+  
+
 }
 .social-list a{
   color: var(--clr-accent-400);
+  
 }
 
+#img-footer img{
+  margin-left: 35%;
+}
 .social-list a:is(:hover, :focus)  {
   color: var(--clr-accent-300);
 }
@@ -552,7 +520,7 @@ span{
 
 
 
-/* Utility classes */
+/* Utility classes  are classes of code that reused*/
 
 .visually-hidden {
   position: absolute;
@@ -687,11 +655,7 @@ span{
 }
 .active {
   text-decoration: underline !important;
-  
 }
-
-
-
 .padding-block-900 {
   padding-block: var(--size-900);
 }
@@ -709,7 +673,6 @@ span{
   margin-block-end: var(--size-1000);
 }
 
-
 .display-sm-none {
   display: none;
 }
@@ -723,10 +686,7 @@ span{
 
 
 
-
-
-
-/* form style */
+/*  contact us page is syle here  */
 .form-section {
   clear: left;
   background-image: url("../images/form-bg.jpg");
@@ -774,16 +734,11 @@ span{
   background-color: #fafafa;
   color: #f16c6b;
 }
-  .social-networks i {
-    font-size: 160%;
-    margin: 1%;
-    padding: 5%;
-    color: #3a3a3a;
- }
+  
   
  
 
-/* syling thank you Message*/
+/* syling thank you Message this is simple a message got after sucessfully fill the form*/
 .thank-u  {
   max-width: 2%;
   max-height: 3%;
@@ -800,18 +755,5 @@ span{
  
 
 
-/* syling thank you Message*/
-.thank-u  {
-  max-width: 2%;
-  max-height: 3%;
-  padding: 3rem 3rem;
-  margin-top: 5%;
-  margin-left: 30%;
-
-}
-.thank-u img {
-  max-width: 320px;
-  max-height: 320px;
-} 
 
  
